syntax = "proto3";

option java_multiple_files = true;
option go_package = "./";

package com.sourceforgery.tachikoma.grpc.frontend.tracking;

import "com/sourceforgery/tachikoma/grpc/frontend/common.proto";

service DeliveryNotificationService {
    rpc NotificationStreamWithKeepAlive(NotificationStreamParameters) returns (stream EmailNotificationOrKeepAlive);
    rpc NotificationStream(NotificationStreamParameters) returns (stream EmailNotification);
}

// Parameters for the notification stream
message NotificationStreamParameters {
    // Whether to include tracking data in the response or not.
    // Like all bools, defaults to false.
    bool include_tracking_data = 101;
    // Whether to include subject in the response opr not.
    // Like all bools, defaults to false.
    bool include_subject = 102;
    // Whether to include metrics in the response or not.
    // Like all bools, defaults to false
    bool include_metrics_data = 103;
    // Only include events for emails with either of these tags.
    // Will not filter if empty.
    repeated string tags = 104;
}

message EmailNotificationOrKeepAlive {
    oneof notification_or_keepalive {
        EmailNotification email_notification = 1;
        string keep_alive = 2;
    }
}
